<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="General">

        <EditTextPreference
            app:defaultValue="@string/pref_default_display_name"
            app:key="user_display_name"
            app:title="@string/pref_title_display_name"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="@string/pref_default_email_address"
            app:key="user_email_address"
            app:title="@string/pref_title_email_address"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="@string/pref_default_favorite_social"
            app:entries="@array/pref_entries_favorite_social"
            app:entryValues="@array/pref_values_favorite_social"
            app:key="user_favorite_social"
            app:title="@string/pref_title_favorite_social"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Notifications"></PreferenceCategory>

    <PreferenceCategory app:title="Data &amp; sync"></PreferenceCategory>

</PreferenceScreen>
